<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_delete"
        android:title="@string/menu_deleteWalk"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_save"
        android:title="@string/menu_saveWalk"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_cancel"
        android:title="@string/menu_cancelWalk"
        app:showAsAction="always" />
</menu>