<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add"
        android:textColor="#000"
        android:title="@string/menu_addWalk"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/item_map"
        android:textColor="#000"
        android:title="@string/menu_showMap"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_logout"
        android:title="@string/menu_logout"
        android:textColor="#000"
        android:visible="true"
        app:showAsAction="never" />
</menu>